[package]
name = "orderbook-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
rdkafka = { version = "0.38.0", features = ["cmake-build", "tokio"] }
serde = { version = "1.0.228", features = ["derive"] }
config = "0.15.19"
tokio = { version = "1.48.0", features = ["full"] }
futures = "0.3.31"
tracing = "0.1.41"
crossbeam-skiplist = "0.1.3"
dashmap = "6.1.0"
pricelevel = "0.4.2"
uuid = "1.18.1"
sha2 = "0.10.9"
bitflags = "2.10.0"
serde_json = "1.0.145"
tracing-subscriber = "0.3.20"
